--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,16 @@
+// @import '../scripts/vendor/nucleo/css/nucleo';
 @import './argon';
-@import '../scripts/vendor/nucleo/css/nucleo-svg';
-.container {
-  color: red;
-}
-.udcj {
-  color: blue;
+// @import '../scripts/vendor/nucleo/css/nucleo-svg';
+
+// .section {
+//   background-image: linear-gradient(
+//     to right,
+//     #f78ca0 0%,
+//     #f9748f 19%,
+//     #fd868c 60%,
+//     #fe9a8b 100%
+//   );
+// }
+.display-5 {
+  font-size: 3.5rem;
 }
